Since 0.5.1
-----------
- `insert!`
  - `.bulk()` accepts iterator over references or instances
- `query!`
  - Select a foreign model as an entire patch using `as` keyword
- sealed traits are actually sealed now
- removed ouroboros from dependencies

Notes for publishing
--------------------
- don't forget to bump and publish rorm-macro!