@@ -6,6 +6,7 @@ Since 0.5.1
   - Select a foreign model as an entire patch using `as` keyword
 - sealed traits are actually sealed now
 - removed ouroboros from dependencies
+- added `get_or_query` and `take_or_query` helper functions for `BackRef`
 
 Notes for publishing
 --------------------
